@@ -6,8 +6,8 @@
  * @subpackage processors.element.propertyset
  */
 
-if (!isset($_POST['id'])) return $modx->error->failure($modx->lexicon('propertyset_err_ns'));
-$set = $modx->getObject('modPropertySet',$_POST['id']);
+if (!isset($_REQUEST['id'])) return $modx->error->failure($modx->lexicon('propertyset_err_ns'));
+$set = $modx->getObject('modPropertySet',$_REQUEST['id']);
 if ($set == null) return $modx->error->failure($modx->lexicon('propertyset_err_nf'));
 
 $properties = $set->get('properties');
