@@ -12,7 +12,7 @@ $modx->lexicon->load('snippet');
 if (!$modx->hasPermission('delete_snippet')) return $modx->error->failure($modx->lexicon('permission_denied'));
 
 /* get snippet */
-$snippet = $modx->getObject('modSnippet',$_REQUEST['id']);
+$snippet = $modx->getObject('modSnippet',$_POST['id']);
 if ($snippet == null) return $modx->error->failure($modx->lexicon('snippet_err_not_found'));
 
 /* invoke OnBeforeSnipFormDelete event */
