@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-887] Properly standardized POST/REQUEST access methods for element processors
 - Fixed issues with user emails being sent in plaintext with no linebreaks; now HTML-based for the time being
 - Package Download tree now disables already downloaded packages.
 - [#MODX-885] Fixed missing break statement in cat output filter
